--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.0.0",
     "expo": "^36.0.0",
     "expo-linear-gradient": "~8.0.0",
+    "expo-notifications": "^0.13.3",
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
